# meteorite-catcher

./: Dockerfile  Dockerfile-small  LICENSE  README.md  docker-compose.yml  pyproject.toml  start.sh
dev/: profile_functions.py
notebooks/: image-diff.ipynb
src/: __main__.py  profile_functions.py  types.py
src/detectors/: base.py  frame_diff.py
src/file_operations/: generators.py  images.py  writer.py
src/frame_difference_detection/: detector.py
src/gstreamer/: app_sink_pipeline.py  detector_controller.py  pipeline.py  record_manager.py  stdin_controller.py  utils.py
src/inference/: base.py  inference.py
src/non_max_supression/: nms.py
tests/: test_something.py
