[tool.poetry]
name = "meteorite-catcher"
version = "0.1.0"
description = "Project that detects meteroites on videos"
authors = ["Jan Gorazda <jan.gorazda@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/jangor1912/meteorite-catcher"
packages = [
    { include = "src" }
]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"

[tool.poetry.group.test.dependencies]
pytest = "^8.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
