[tool.poetry]
name = "meteorite-catcher"
version = "0.1.0"
description = "Project that detects meteroites on videos"
authors = ["Jan Gorazda <jan.gorazda@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/jangor1912/meteorite-catcher"
packages = [
    { include = "src" }
]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
opencv-python = "^4.9.0.80"
matplotlib = "^3.9.0"
sortedcontainers = "2.4.0"
ioutrack = "^0.3.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.2.1"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
