[tool.poetry]
name = "meteorite-catcher"
version = "0.1.0"
description = "Project that detects meteroites on videos"
authors = ["Jan Gorazda <jan.gorazda@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/jangor1912/meteorite-catcher"
packages = [
    { include = "src" }
]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.14.3"
pycairo = "^1.18.2"
PyGObject = "*"
attrs = "^19.3.0"
opencv-python = "^4.9.0.80"
matplotlib = "^3.9.0"
ioutrack = "^0.3.0"

[tool.poetry.group.test.dependencies]
pytest = "^5.3.2"
pytest-benchmark = "^3.2.2"
PyGObject-stubs = "*"
jupyter = "^1.0.0"
autopep8 = "^1.4.4"
flake8 = "^3.7.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
